Add installation script.

--- a/scripts/com.stefanotranquillini.shutdown.plist.tmpl
+++ b/scripts/com.stefanotranquillini.shutdown.plist.tmpl
@@ -7,7 +7,7 @@
 
     <key>ProgramArguments</key>
     <array>
-      <string><FULL PATH TO YOUR HOME FOLDER>.shutdown</string>
+      <string>${HOME}/.shutdown</string>
     </array>
 
     <key>RunAtLoad</key>
