--- a/scripts/com.stefanotranquillini.sleepwatcher.plist.tmpl
+++ b/scripts/com.stefanotranquillini.sleepwatcher.plist.tmpl
@@ -8,13 +8,13 @@
 	<array>
 		<string>/usr/local/sbin/sleepwatcher</string>
 		<string>-V</string>
-		<string>-s ${HOME}.sleep</string>
-		<string>-w ${HOME}.wakeup</string>
+		<string>-s ${HOME}/.sleep</string>
+		<string>-w ${HOME}/.wakeup</string>
 		<string>-t 300</string>
-		<string>-i ${HOME}.sleep</string>
-		<string>-R ${HOME}.wakeup</string>
-        <string>-D ${HOME}.sleep</string>
-        <string>-W ${HOME}.wakeup</string>
+		<string>-i ${HOME}/.sleep</string>
+		<string>-R ${HOME}/.wakeup</string>
+        <string>-D ${HOME}/.sleep</string>
+        <string>-W ${HOME}/.wakeup</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
